# levatas-word-indexer

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
levatas_indexer/: __init__.py  application.py  indexer.py  logging.json  paths.py  processors.py  routes.py  utils.py
levatas_indexer/static/js/: functions.js
levatas_indexer/templates/: base.html  index.html
tests/integration/: conftest.py  test_home_page.py
tests/unit/: test_indexer.py  test_processors.py  test_utils.py
